--- a/.env.sample
+++ b/.env.sample
@@ -1,12 +1,12 @@
 DATABASE_URL=file:local.db
-DB_AUTH_TOKEN=
-HOST_NAME=
+DB_AUTH_TOKEN=IF_USING_TURSO
+HOST_NAME="http://localhost:3000"
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GITHUB_CLIENT_SECRET=
 GITHUB_CLIENT_ID=
-EMAIL_SERVER_USER=
-EMAIL_SERVER_PASSWORD=
-EMAIL_SERVER_HOST=
-EMAIL_SERVER_PORT=
-EMAIL_FROM=
+EMAIL_SERVER_USER=resend
+EMAIL_SERVER_PASSWORD=ADD_YOUR_KEY
+EMAIL_SERVER_HOST=smtp.resend.com
+EMAIL_SERVER_PORT=465
+EMAIL_FROM="Your App <no-reply@yourdoman.com>"
